--- a/CMP400-artifact/CMP400-artifact.vcxproj
+++ b/CMP400-artifact/CMP400-artifact.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClCompile Include="src\engine\App.cpp" />
     <ClCompile Include="src\engine\Device.cpp" />
+    <ClCompile Include="src\engine\Model.cpp" />
     <ClCompile Include="src\engine\Pipeline.cpp" />
     <ClCompile Include="src\engine\SwapChain.cpp" />
     <ClCompile Include="src\Main.cpp" />
@@ -183,6 +184,7 @@
   <ItemGroup>
     <ClInclude Include="src\engine\App.h" />
     <ClInclude Include="src\engine\Device.h" />
+    <ClInclude Include="src\engine\Model.h" />
     <ClInclude Include="src\engine\Pipeline.h" />
     <ClInclude Include="src\engine\SwapChain.h" />
     <ClInclude Include="src\pch.h" />
