Renderer & Render system abstraction created

--- a/CMP400-artifact/CMP400-artifact.vcxproj
+++ b/CMP400-artifact/CMP400-artifact.vcxproj
@@ -164,10 +164,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\App.cpp" />
-    <ClCompile Include="src\engine\Device.cpp" />
-    <ClCompile Include="src\engine\Model.cpp" />
-    <ClCompile Include="src\engine\Pipeline.cpp" />
-    <ClCompile Include="src\engine\SwapChain.cpp" />
+    <ClCompile Include="src\engine\graphics\Renderer.cpp" />
+    <ClCompile Include="src\engine\graphics\SimpleRenderSystem.cpp" />
+    <ClCompile Include="src\engine\system\Device.cpp" />
+    <ClCompile Include="src\engine\GameObject.cpp" />
+    <ClCompile Include="src\engine\graphics\Model.cpp" />
+    <ClCompile Include="src\engine\graphics\Pipeline.cpp" />
+    <ClCompile Include="src\engine\graphics\SwapChain.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -179,16 +182,19 @@
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">pch.h</PrecompiledHeaderFile>
     </ClCompile>
-    <ClCompile Include="src\engine\Window.cpp" />
+    <ClCompile Include="src\engine\system\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\engine\App.h" />
-    <ClInclude Include="src\engine\Device.h" />
-    <ClInclude Include="src\engine\Model.h" />
-    <ClInclude Include="src\engine\Pipeline.h" />
-    <ClInclude Include="src\engine\SwapChain.h" />
+    <ClInclude Include="src\engine\graphics\Renderer.h" />
+    <ClInclude Include="src\engine\graphics\SimpleRenderSystem.h" />
+    <ClInclude Include="src\engine\system\Device.h" />
+    <ClInclude Include="src\engine\GameObject.h" />
+    <ClInclude Include="src\engine\graphics\Model.h" />
+    <ClInclude Include="src\engine\graphics\Pipeline.h" />
+    <ClInclude Include="src\engine\graphics\SwapChain.h" />
     <ClInclude Include="src\pch.h" />
-    <ClInclude Include="src\engine\Window.h" />
+    <ClInclude Include="src\engine\system\Window.h" />
     <ClInclude Include="src\utils\Utils.h" />
   </ItemGroup>
   <ItemGroup>
