texture implementation cleaned up

--- a/CMP400-artifact/CMP400-artifact.vcxproj
+++ b/CMP400-artifact/CMP400-artifact.vcxproj
@@ -280,6 +280,7 @@
     <ClCompile Include="src\engine\graphics\models\Primatives.cpp" />
     <ClCompile Include="src\engine\graphics\Renderer.cpp" />
     <ClCompile Include="src\engine\graphics\SimpleRenderSystem.cpp" />
+    <ClCompile Include="src\engine\graphics\textures\Sampler.cpp" />
     <ClCompile Include="src\engine\graphics\textures\Texture.cpp" />
     <ClCompile Include="src\engine\graphics\textures\TextureManager.cpp" />
     <ClCompile Include="src\engine\GuiManager.cpp" />
@@ -330,6 +331,7 @@
     <ClInclude Include="src\engine\graphics\models\Primatives.h" />
     <ClInclude Include="src\engine\graphics\Renderer.h" />
     <ClInclude Include="src\engine\graphics\SimpleRenderSystem.h" />
+    <ClInclude Include="src\engine\graphics\textures\Sampler.h" />
     <ClInclude Include="src\engine\graphics\textures\Texture.h" />
     <ClInclude Include="src\engine\graphics\textures\TextureManager.h" />
     <ClInclude Include="src\engine\GuiManager.h" />
